# revm

bins/revm-test/: Cargo.toml
bins/revme/: Cargo.toml
crates/interpreter/: Cargo.toml
crates/precompile/: Cargo.toml
crates/primitives/: Cargo.toml
crates/revm/: Cargo.toml
